# morphlib

./: .gitmodules  CMakeLists.txt  README.md
include/morphlib/: AutoFitTextBox.h  BandPassFilter.h  MtsEsp.h  Synthesiser.h  Synthesizer.h  Voice.h
src/: AutoFitTextBox.cpp  BandPassFilter.cpp  Synthesiser.cpp  Synthesizer.cpp  Voice.cpp
